--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,36 +7,50 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <RelativeLayout
-        android:id="@+id/myLayout"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:background="@color/skyblue"
-        android:gravity="center"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView2"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginTop="30dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Tester"
-            android:textSize="36sp"
-            />
 
-    </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/myLayout"
+            android:layout_width="3000dp"
+            android:layout_height="1000dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/bg"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tester"
+                android:textColor="@color/white"
+                android:textSize="36sp" />
+
+
+        </RelativeLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
     <Button
         android:id="@+id/btnSave"
         android:layout_width="300dp"
         android:layout_height="50dp"
+        android:backgroundTint="@color/black"
+        android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="30dp"
-        android:text="Save"
-        android:backgroundTint="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/myLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView2" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
